--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 rocket = { version = "0.5.1", features = ["json"] } # "0.5.1"
+serde = "1.0.209"
+serde_json = "1.0.127"
